# backend/src/modules/report-structuring/transport/report-structuring.controller-contract.ts
@@ -1,6 +1,7 @@
 export interface ValidateStructureRequestBody {
   documentId: string;
   templateType: "praktikum" | "makalah" | "proposal" | "skripsi";
+  detectedSectionCodes: string[];
 }
 
 export interface ValidateStructureResponseBody {
